--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title></title>
+    <title>Boilerplate</title>
 </head>
 
 <body>
@@ -17,12 +17,15 @@
     </header>
 
     <main>
-
+        <section></section>
+        <section></section>
+        <section></section>
     </main>
 
     <footer>
 
     </footer>
-</body>
 
+    <script src="js/script.js"></script>
+</body>
 </html>
